# pulumist

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: with_references.rs
output-references-demo/: Pulumi.dev.yaml  Pulumi.yaml
proto/: pulumist.proto
pulumist-core/: Cargo.toml
pulumist-ffi/: Cargo.toml  build.rs
pulumist-ffi/src/: lib.rs
pulumist-go/: README.md  codegen.go  converters.go  event_stream.go  go.mod  go.sum  program_factory.go  pulumist.go
src/: config.rs  dynamic.rs  engine.rs  error.rs  events.rs  lib.rs  outputs.rs  proto.rs  stack.rs
