[package]
name = "pulumist"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
libc = "0.2.174"
lazy_static = "1.5.0"
regex = "1.11.1"
prost = "0.14.1"
bytes = "1.10.1"
base64 = "0.22.1"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.14.1"