[package]
name = "pulumist"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
libc = "0.2.174"
lazy_static = "1.5.0"
regex = "1.11.1"
prost = "0.14.1"
bytes = "1.10.1"
base64 = "0.22.1"
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[[example]]
name = "with-references"
path = "examples/with_references.rs"